@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Fixed: [ 1952553 ] SVN 2931 - Related facts - wrong titles of events on INDI (canajun2eh)
  - Fixed: [ 1954352 ] Placename Issue On Language Change For Some Themes (canajun2eh)
  - Fixed: [ 1952626 ] Place Hierarchy with GoogleMap - Umlauts in Place Name (canajun2eh)
  - Fixed: [ 1952654 ] 4.1.6 2931 Fatal error familysearch.php on line 160 (fisharebest)
